--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
+	    <img src="https://www.instagram.com/p/CJjX_e7DSIP/" 
+	    <li>
                 <a href="#about">About</a>
             </li>
             <li>
@@ -73,9 +75,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                       My name is Michelle Bounajem and I am a student at the University of Texas at San Antonio. 
                     </p>
                 </div>
             </div>
@@ -188,9 +188,9 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
+            <li>Bilingual</li>
+            <li>Excel</li>
+            <li>Microsoft</li>
            
             <li>C</li>
             <li>C#</li>
