--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         </div>
         <ul id="menu" class="shadow">
             <li>
-	    <img src="https://www.instagram.com/p/CJjX_e7DSIP/" 
+	    <img src="ps://images.app.goo.gl/AeePaBVZ43aVuHTUA"
+ 
 	    <li>
                 <a href="#about">About</a>
             </li>
