--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         <ul id="menu" class="shadow">
-            <li>
-	    <img src="ps://images.app.goo.gl/AeePaBVZ43aVuHTUA"
- 
+            
 	    <li>
                 <a href="#about">About</a>
             </li>
@@ -68,6 +66,9 @@
     </div>
     <!-- End #lead -->
 
+	ps://images.app.goo.gl/AeePaBVZ43aVuHTUA
+
+	
     <div id="about">
         <div class="container">
             <div class="row">
