--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
         <!-- End #lead-down -->
     </div>
     <!-- End #lead -->
-
-	ps://images.app.goo.gl/AeePaBVZ43aVuHTUA
-
+	
 	
     <div id="about">
         <div class="container">
@@ -77,7 +75,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                       My name is Michelle Bounajem and I am a student at the University of Texas at San Antonio. 
+                       My name is Michelle Bounajem and I graduated from the University of Texas at San Antonio with my bachelor's degree in Medical Humanities.I am currently a Graduate Student attending the University of Utah as an Instructional Design student.
                     </p>
                 </div>
             </div>
@@ -89,10 +87,10 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>The University of Texas at San Antonio</h3>
+                <h4>Program Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                     I performed basic administrative duties such as answering phones and emails, filing, and managing schedules, while also assisting in budget oversight and event planning. Answer phones and respond to emails. Schedule appointments and meetings for staff.
                 </p>
             </div>
 
