--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </div>
     <!-- End #lead -->
 	
+	Screen Shot 2021-02-12 at 10 40 17 PM
 	
     <div id="about">
         <div class="container">
