--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <!-- End #lead -->
 	
-	https://github.com/MichelleBounajem/EDPS___MichelleBounajem/issues/2#issue-807690428
+	<img> src="https://github.com/MichelleBounajem/EDPS___MichelleBounajem/issues/2#issue-807690428"
 	
     <div id="about">
         <div class="container">
