--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <!-- End #lead -->
 	
-	<img> src="https://github.com/MichelleBounajem/EDPS___MichelleBounajem/issues/2#issuecomment-778573063"
+	<img src="https://github.com/MichelleBounajem/EDPS___MichelleBounajem/issues/2#issuecomment-778573063">
 	
     <div id="about">
         <div class="container">
