--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <!-- End #lead -->
 	
-	<img src="https://github.com/MichelleBounajem/EDPS___MichelleBounajem/issues/2#issuecomment-778573063">
+	<img src="https://user-images.githubusercontent.com/71407765/107843793-3448cc80-6d8b-11eb-9102-029f77397fbf.png">
 	
     <div id="about">
         <div class="container">
