--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     <!-- End #lead -->
 	
-	<img src="https://user-images.githubusercontent.com/71407765/107843793-3448cc80-6d8b-11eb-9102-029f77397fbf.png">
+	<img src="https://www.instagram.com/p/CJjX_e7DSIP/">
 	
     <div id="about">
         <div class="container">
