--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <!-- End #lead -->
 	
-	<img src="https://www.instagram.com/p/CJjX_e7DSIP/">
+	<img src="https://images.app.goo.gl/DXvsFdiAjseaBYgb8">
 	
     <div id="about">
         <div class="container">
