--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <!-- End #lead -->
 	
-	<img src="https://images.app.goo.gl/DXvsFdiAjseaBYgb8">
+	<img src="https://www.linkedin.com/in/michelle-bounajem-333893166/">
 	
     <div id="about">
         <div class="container">
