--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <!-- End #lead -->
 	
-	<img src="https://www.linkedin.com/in/michelle-bounajem-333893166/">
+	<img src="https://www.instagram.com/p/CJjX_e7DSIP/">
 	
     <div id="about">
         <div class="container">
