--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <!-- End #lead -->
 	
-	<img src="https://www.linkedin.com/in/michelle-bounajem-333893166/">
+	<img src="https://user-images.githubusercontent.com/71407765/107843793-3448cc80-6d8b-11eb-9102-029f77397fbf.png">
 	
     <div id="about">
         <div class="container">
