--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 
+<link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>	
+	
+	
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
