--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
-
-<link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>	
+	
+	
+rel="stylesheet"
 	
 	
 <head>
