--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
-
+<link rel="stylesheet" href="css/style.css"/>
+	
 <body>
     <div id="mobile-menu-open" class="shadow-large">
         <i class="fa fa-bars" aria-hidden="true"></i>
