--- a/index.html
+++ b/index.html
@@ -201,7 +201,6 @@
     <script src="js/scripts.min.js"></script>
 </body>
 
-<p style="background-color:Tomato;">Lorem ipsum...</p>
-<h1 style="background-color:DodgerBlue;">Hello World</h1>
+<p style="background-color:Tomato;"></p>
 
 </html>
