--- a/index.html
+++ b/index.html
@@ -202,6 +202,26 @@
 </body>
 
 <p style="background-color:Tomato;"></p>
-<h1 style="background-color:rgb(255, 99, 71);">...</h1>
+
+<!DOCTYPE html>
+<title>Example</title>
+<style>
+body {
+    background: url('/pix/samples/bg2.png') beige;
+    color: rgba(0, 0, 0, 1);
+    font-size: 2em;
+ }
+article { 
+    background-color: rgba(30, 255, 50, 0.5);
+    border: 5px solid olive;
+    margin: 20px;
+    text-align: center;
+    }
+</style>
+<article>
+<h1>Stars</h1>
+</article>
+
+
 
 </html>
