--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
     <script src="js/scripts.min.js"></script>
 </body>
 
-<p style="background-color:Tomato;"></p>
-<p style="color:DodgerBlue;"></p>
-<p style="color:MediumSeaGreen;"></p>
+<p style="background-color:DodgerBlue;"></p>
+
 
 </html>
