--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <script src="js/scripts.min.js"></script>
 </body>
 
-<p style="background-color:DodgerBlue;"></p>
+body {background-color: coral;}
 
 
 </html>
